BREAKING CHANGE: setting up a team subscription.
Signed-off-by: aniebietafia <aniebietafia87@gmail.com>